dodanie css-owd

--- a/style.css
+++ b/style.css
@@ -893,3 +893,7 @@ object {
 .gallery-caption {
 	display: block;
 }
+@import "css/header.css";
+@import "css/style.css";
+@import "css/damiancss.css";
+
